# PortAudio2

./: .gitignore  CMakeLists.txt  appveyor.yml
cmake/: FindASIOSDK.cmake  FindAudioToolbox.cmake  FindAudioUnit.cmake  FindCoreAudio.cmake  FindCoreFoundation.cmake  FindCoreServices.cmake  FindDXSDK.cmake
examples/: CMakeLists.txt  paex_record_file.c
include/: pa_win_wdmks.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  pa_hostapi.h.in
src/hostapi/: CMakeLists.txt
src/hostapi/alsa/: CMakeLists.txt
src/hostapi/asihpi/: CMakeLists.txt
src/hostapi/asio/: CMakeLists.txt
src/hostapi/coreaudio/: CMakeLists.txt
src/hostapi/dsound/: CMakeLists.txt
src/hostapi/jack/: CMakeLists.txt
src/hostapi/oss/: CMakeLists.txt
src/hostapi/skeleton/: CMakeLists.txt
src/hostapi/wasapi/: CMakeLists.txt  pa_win_wasapi.c
src/hostapi/wasapi/mingw-include/: audioclient.h
src/hostapi/wdmks/: CMakeLists.txt  pa_win_wdmks.c
src/hostapi/wmme/: CMakeLists.txt
src/os/: CMakeLists.txt
src/os/unix/: CMakeLists.txt  pa_unix_hostapis.c
src/os/win/: CMakeLists.txt  pa_win_hostapis.c
test/: CMakeLists.txt  patest1.c  patest_converters.c  patest_longsine.c  patest_multi_sine.c  patest_unplug.c  patest_wire.c
